--- a/src/app/vacina/vacina-listagem/vacina-listagem.component.html
+++ b/src/app/vacina/vacina-listagem/vacina-listagem.component.html
@@ -1,1 +1,32 @@
-<pre>vacina-listagem works!</pre>
+<form>
+  <div class="col-md-12">
+      <div class="col-md-3">
+          <label for="nomePais" class="form-label">País:</label>
+          <input type="text" class="form-control" id="nomePais">
+      </div>
+      <button type="submit" class="btn btn-primary" >Pesquisar</button>
+  </div>
+</form>
+
+<br><br>
+
+<table class="table table-dark table-hover">
+  <thead>
+      <th>Nome</th>
+      <th>País de Origem</th>
+      <th>Pesquisador</th>
+      <th>Iniciada em:</th>
+      <th>Estágio</th>
+  </thead>
+  <tbody>
+      @for(vacina of vacinas; track vacina) {
+          <tr>
+              <td>{{ vacina.nome }}</td>
+              <td>{{ vacina.pais.nome }}</td>
+              <td>{{ vacina.pesquisadorResponsavel.nome }}</td>
+              <td>{{ vacina.dataInicioPesquisa | date: 'dd/MM/yyyy' }}</td>
+              <td>{{ vacina.estagioDaVacina }}</td>
+          </tr>
+      }
+  </tbody>
+</table>
