--- a/src/app/vacina/vacina-listagem/vacina-listagem.component.html
+++ b/src/app/vacina/vacina-listagem/vacina-listagem.component.html
@@ -1,6 +1,6 @@
-<!--<pre>Seletor: {{ seletor | json}}</pre>-->
+<pre>Seletor: {{ seletor | json}}</pre>
 <!--<pre>Países: {{ paises | json}}</pre> -->
-<!--<pre>{{ seletor | json}}</pre>-->
+<!-- <pre>Vacinas:{{ vacinas | json}}</pre> -->
 
 <div class="container">
   <form>
