atualização de edição de vacina

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,15 +11,7 @@
                   <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="/vacina/cadastrar">Cadastrar vacina</a></li>
                       <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="/vacina">Atualizar vacina</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="/vacina/listagem">Listar todas as vacinas</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="/vacina">Listar uma vacina</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="/vacina">Excluir uma vacina</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="/vacina">Listar vacinas com filtro</a></li>
+                      <li><a class="dropdown-item" href="/vacina/listagem">Listagem</a></li>
                   </ul>
               </li>
               <li class="nav-item dropdown">
@@ -30,13 +22,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/pessoa">Cadastrar pessoa</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/pessoa">Atualizar pessoa</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/pessoa">Listar todas as pessoa</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/pessoa">Listar uma pessoa</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/pessoa">Excluir uma pessoa</a></li>
+                    <li><a class="dropdown-item" href="/pessoa">Listagem</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
@@ -47,15 +33,7 @@
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="/aplicacao">Cadastrar aplicação</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/aplicacao">Atualizar aplicação</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/aplicacao">Listar todas as aplicações de um usuário</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/aplicacao">Listar todas as aplicações cadastradas</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/aplicacao">Listar uma aplicação</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="/aplicacao">Excluir uma aplicação</a></li>
+                  <li><a class="dropdown-item" href="/aplicacao">Listagem</a></li>
               </ul>
             </li>
               <li class="nav-item">
@@ -66,4 +44,4 @@
   </div>
 </nav>
 <br>
-<router-outlet></router-outlet><router-outlet></router-outlet>
+<router-outlet></router-outlet>
