--- a/src/app/vacina/vacina-cadastrar/vacina-cadastrar.component.html
+++ b/src/app/vacina/vacina-cadastrar/vacina-cadastrar.component.html
@@ -1,27 +1,134 @@
-<form>
-  <div class="form-group">
-    <label for="nomeDaVacina">Nome da vacina</label>
-    <input type="text" class="form-control" id="nomeDaVacina" placeholder="insira aqui o nome da vacina aqui">
+<!--<pre>{{vacina | json}}</pre>-->
+
+<!--
+<form class="p-4">
+  <div class="row">
+    <div class="form-group col-md-4">
+      <label for="nomeDaVacina">Nome da vacina</label>
+      <input class="form-control" name="nomeDaVacina" id="nomeDaVacina"
+             placeholder="insira aqui o nome da vacina aqui"
+             [(ngModel)]="vacina.nome" required>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="pesquisadorResponsavel">Pesquisador responsável</label>
+      <select class="form-control" name="pesquisadorResponsavel" id="pesquisadorResponsavel"
+      [(ngModel)]="vacina.pesquisadorResponsavel" required>
+    @for(p of pessoas; track p.idPessoa) {
+      <option [ngValue]="p">{{ p.nome }}</option>
+  }
+      </select>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="pesquisadorResponsavel">Pesquisador responsável</label>
-    <input type="text" class="form-control" id="pesquisadorResponsavel" placeholder="insira aqui o nome do pesquisador responsável">
+  <div class="row">
+    <div class="form-group col-md-2">
+      <label for="estagioDaVacina">Estágio da vacina</label>
+      <select class="form-control" name="estagioDaVacina" id="estagioDaVacina"
+      [(ngModel)]="vacina.estagioDaVacina">
+        <option value="1">1 - Estágio inicial</option>
+        <option value="2">2 - Testes</option>
+        <option value="3">3 - Aplicação em massa</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="dataInicioPesquisa">Data do início da pesquisa</label>
+      <input type="date" class="form-control" name="dataInicioPesquisa" id="dataInicioPesquisa"
+      [(ngModel)]="vacina.dataInicioPesquisa" required>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="nomeDoPais">País</label>
+      <select class="form-control" name="nomeDoPais" id="nomeDoPais"
+            [(ngModel)]="vacina.pais" required>
+      @for(p of paises; track p.id_Pais){
+        <option [ngValue]="p">{{p.nome}}</option>
+      }
+      </select>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="estagioDaVacina">Estágio da vacina</label>
-    <input type="number" class="form-control" id="estagioDaVacina" placeholder="insira aqui o número do estágio em que a vacina se encontra">
+
+  <div class="row">
+    <div class="form-group col-md-1">
+      <button type="submit" class="form-control btn btn-warning" (click)="voltar()">
+          <i class="bi bi-arrow-left"></i> Voltar
+      </button>
+    </div>
+    <div class="form-group col-md-6">
+      <div class="row">
+        <div class="col-md-3">
+          <button type="button" class="form-control btn btn-secondary" (click)="limparFormulario()">
+            <i class="bi bi-x-circle"></i> Limpar
+          </button>
+        </div>
+        <div class="col-md-3">
+          <button type="submit" class="btn btn-primary" (click)="salvar()">Enviar</button>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label for="dataInicioPesquisa">Data do início da pesquisa</label>
-    <input type="date" class="form-control" id="dataInicioPesquisa" placeholder="insira aqui a data do início da pesquisa">
-  </div>
-  <div class="form-group">
-    <label for="nomeDoPais">País</label>
-    <input type="text" class="form-control" id="nomeDoPais" placeholder="insira aqui o nome do país em que a vacina foi desenvolvida">
-  </div>
-  <div class="form-group">
-    <label for="mediaDaVacina">Média da Vacina</label>
-    <input type="number" class="form-control" id="mediaDaVacina" placeholder="insira aqui o valor da mádia de avaliações da vacina">
-  </div>
-  <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
+-->
+<form class="p-4">
+  <div class="row mb-3">
+    <div class="form-group col-md-4">
+      <label for="nomeDaVacina">Nome da vacina</label>
+      <input class="form-control" name="nomeDaVacina" id="nomeDaVacina"
+             placeholder="insira aqui o nome da vacina aqui"
+             [(ngModel)]="vacina.nome" required>
+    </div>
+    <div class="form-group col-md-6">
+      <label for="pesquisadorResponsavel">Pesquisador responsável</label>
+      <select class="form-control" name="pesquisadorResponsavel" id="pesquisadorResponsavel"
+      [(ngModel)]="vacina.pesquisadorResponsavel" required>
+        @for(p of pessoas; track p.idPessoa) {
+          <option [ngValue]="p">{{ p.nome }}</option>
+        }
+      </select>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="form-group col-md-2">
+      <label for="estagioDaVacina">Estágio da vacina</label>
+      <select class="form-control" name="estagioDaVacina" id="estagioDaVacina"
+      [(ngModel)]="vacina.estagioDaVacina">
+        <option value="1">1 - Estágio inicial</option>
+        <option value="2">2 - Testes</option>
+        <option value="3">3 - Aplicação em massa</option>
+      </select>
+    </div>
+    <div class="form-group col-md-2">
+      <label for="dataInicioPesquisa">Data do início da pesquisa</label>
+      <input type="date" class="form-control" name="dataInicioPesquisa" id="dataInicioPesquisa"
+      [(ngModel)]="vacina.dataInicioPesquisa" required>
+    </div>
+    <div class="form-group col-md-3">
+      <label for="nomeDoPais">País</label>
+      <select class="form-control" name="nomeDoPais" id="nomeDoPais"
+            [(ngModel)]="vacina.pais" required>
+        @for(p of paises; track p.id_Pais){
+          <option [ngValue]="p">{{p.nome}}</option>
+        }
+      </select>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="form-group col-md-1">
+      <button type="submit" class="form-control btn btn-warning" (click)="voltar()">
+          <i class="bi bi-arrow-left"></i> Voltar
+      </button>
+    </div>
+    <div class="form-group col-md-6">
+      <div class="row">
+        <div class="col-md-2">
+          <button type="button" class="form-control btn btn-secondary" (click)="limparFormulario()">
+            <i class="bi bi-x-circle"></i> Limpar
+          </button>
+        </div>
+        <div class="col-md-4">
+          <button type="submit" class="btn btn-primary w-100" (click)="salvar()">Enviar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</form>
+
+
