--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                   <ul class="dropdown-menu">
                     <li><a class="dropdown-item" href="/pessoa">Cadastrar pessoa</a></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="/pessoa">Listagem</a></li>
+                    <li><a class="dropdown-item" href="/pessoa/listagem">Listagem</a></li>
                 </ul>
               </li>
               <li class="nav-item dropdown">
