atualização de pessoa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
                       Usuários
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/pessoa">Cadastrar pessoa</a></li>
+                    <li><a class="dropdown-item" href="/pessoa/cadastro">Cadastrar pessoa</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/pessoa/listagem">Listagem</a></li>
                 </ul>
