--- a/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
+++ b/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
@@ -86,7 +86,7 @@
           <td>
             <div class="row">
               <div class="col-md-4">
-                <button class="btn btn-primary btn-block">
+                <button class="btn btn-primary btn-block" (click)="editar(pessoa.idPessoa)">
                   <i class="bi bi-x"></i>Editar</button>
               </div>
               <div class="col-md-4">
