--- a/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
+++ b/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
@@ -98,6 +98,12 @@
         </tr>
       }
     </tbody>
+    <nav aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" (click)="anterior()">Previous</a></li>
+        <li class="page-item"><a class="page-link" (click)="posterior()">Next</a></li>
+      </ul>
+    </nav>
   </table>
 </div>
 
