atualização de cadastrar aplicação

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
                     Aplicações
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="/aplicacao">Cadastrar aplicação</a></li>
+                  <li><a class="dropdown-item" href="/aplicacao/cadastro">Cadastrar aplicação</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="/aplicacao">Listagem</a></li>
               </ul>
