--- a/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
+++ b/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
@@ -1,3 +1,4 @@
+<!-- FALTOU INSERIR O MÉTODO " COMPARE BY ID " EM ALGUMAS TAGS SELECT-->
 <div class="container">
   <form>
       <div class="card">
