--- a/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
+++ b/src/app/pessoa/pessoa-listagem/pessoa-listagem.component.html
@@ -103,7 +103,7 @@
         <div class="col-md-6">
         <!-- Componente de quantidade de registros por página -->
         <label for="quantidadeRegistros">Quantidade de registros por página:</label>
-        <select class="form-select" [(ngModel)]="seletor.limite" (change)="atualizarPaginacao()">
+        <select class="form-select" [(ngModel)]="seletor.limite" (change)="atualizarQtdeRegistrosPorPagina()">
             <option value="3">3</option>
             <option value="5">5</option>
             <option value="10">10</option>
